infra/kubernetes/ingress/ingress-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: ingress-nginx-controller
    namespace: ingress-nginx
    annotations:
        service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
        service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 80
          targetPort: http
        - name: https
          port: 443
          targetPort: https
    selector:
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/component: controller
